JQuery 1.7 added Fixed issue with improper layout switching when language changes for Search results page Added history model Refactored setLayout function

--- a/Locales/de/hotelcard.html
+++ b/Locales/de/hotelcard.html
@@ -1,4 +1,4 @@
-<script type="text/html" id="hotelcard_tmpl">
+﻿<script type="text/html" id="hotelcard_tmpl">
     <div class="hotel info-1"></div>
     <div class="hotel info-2"></div>
     <div id="reviewsCache"></div>
@@ -200,7 +200,7 @@
 							</select>
 							<p class="available"><span class="yes number">7</span> <span class="yes">verfügbar</span> für die gewählte Periode</p>
 							<p class="unavailable"><span class="no">Nicht verfügbar</span> für die gewählte Periode.<br />
-						Versuchen Sie eine andere Zimmerkategorie.</p>
+						Probieren Sie eine andere Zimmerkategorie.</p>
 						</div>
 
 						<div class="apt-room-number">
@@ -239,10 +239,10 @@
 					</div>
 
 					<div class="sideblock opener inactive">
-						<h3>Gesamtkosten: <span id="orderCurrency" class="important">EUR</span> <span id="orderTotal" class="important">1,885</span></h3>
+						<h3>Erst: <span id="orderCurrency" class="important">EUR</span> <span id="orderTotal" class="important">1,885</span></h3>
 
 						<div class="label last">
-							<span class="label">Bestellen</span><input type="submit" name="submit" value="Bestätigen" class="submit" />
+							<span class="label">Auftrag</span><input type="submit" name="submit" value="Ok" class="submit" />
 						</div>
 
 					</div>
