--- a/Locales/de/searchResults.html
+++ b/Locales/de/searchResults.html
@@ -1,7 +1,7 @@
-<script type="text/html" id="sortmenu">
+﻿<script type="text/html" id="sortmenu">
  <h4 class="lookfor nodisplay">Suchen: Zimmer in 2, 3 oder 5-Sterne-Hotel, 8 Nachte vom 22.09.2008 bis 29.09.2008, fur 2 Personen, mit Vollpension oder Halbpension Mahlzeiten, 60 bis 80 EUR pro Nacht, mit Parkplatz und Internet.</h4>
 			<h3 class="results-stat"><strong>{{offersCount}}</strong> Angebote in <strong>{{hotelsCount}}</strong> Hotels gefunden.<br />
-			<span class="noprint"><a href="main-results.html#" class="noreload" onclick="$(this).parent().hide(); return switchSearchtype('advanced')">Erzahlen Sie uns mehr</a> fur bessere Passform und </span>
+			<span class="noprint"><a href="main-results.html#" class="noreload" id="lnkSwitchSType">Erzahlen Sie uns mehr</a> fur bessere Passform und </span>
 			<span class="host subscribehost noprint"><a href="main-results.html#" class="bt_subscribe noreload">Abonnieren Sie ahnliche Angebote</a>.
 
 				<form class="subscribeform" action="../"><div class="container">
