--- a/Locales/en/hotelcard.html
+++ b/Locales/en/hotelcard.html
@@ -1,4 +1,4 @@
-<script type="text/html" id="hotelcard_tmpl">
+﻿<script type="text/html" id="hotelcard_tmpl">
     <div class="hotel info-1"></div>
     <div class="hotel info-2"></div>
     <div id="reviewsCache"></div>
