--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -1,4 +1,4 @@
-<script type="text/html" id="langmenu">
+﻿<script type="text/html" id="langmenu">
        <ul id="languageSwitcher" class="topblock menu">
        </ul>
        {{>topbar_menu_tmpl}}
