--- a/Locales/en/searchResults.html
+++ b/Locales/en/searchResults.html
@@ -1,7 +1,7 @@
-<script type="text/html" id="sortmenu">
+﻿<script type="text/html" id="sortmenu">
  <h4 class="lookfor nodisplay">Looking for: rooms in 2, 3 or 5 star hotel, for 8 nights from 22.09.2008 to 29.09.2008, for 2 persons, with Full Board or Half Board meals, from 60 to 80 EUR per night, with Parking and Internet.</h4>
 			<h3 class="results-stat"><strong>{{offersCount}}</strong> offers in <strong>{{hotelsCount}}</strong> hotels found.<br />
-			<span class="noprint"><a href="main-results.html#" class="noreload" onclick="$(this).parent().hide(); return switchSearchtype('advanced')">Tell us more</a> for better fit or </span>
+			<span class="noprint"><a href="main-results.html#" class="noreload" id="lnkSwitchSType">Tell us more</a> for better fit or </span>
 			<span class="host subscribehost noprint"><a href="main-results.html#" class="bt_subscribe noreload">Subscribe to similar offers</a>.
 
 				<form class="subscribeform" action="../"><div class="container">
@@ -36,7 +36,7 @@
 </div>
 <script type="text/html" id="ro_block_tmpl">
         <div id="randomsblock" class="container">
-				<h2>Top popular</h2>
+				<h2>Random Offers</h2>
 				<p class="location">in <a href="main-results.html#">Amsterdam</a>, Holland </p>
 				<div id="randomslist"></div>
         </div>
