--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -1,4 +1,4 @@
-<script type="text/html" id="langmenu">
+﻿<script type="text/html" id="langmenu">
         <ul id="languageSwitcher" class="topblock menu">
         </ul>
         {{>topbar_menu_tmpl}}
@@ -53,7 +53,7 @@
                             <p class="info"><a href="#!/lookup/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="Ещё отели в {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
                             <p class="info">от <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
                             <p class="descr">{{description}}</p>
-                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Подробнее об отеле">Подробнее об отеле</a> / <a href="#!/select/{{hotelId}}" title="Добавить в Избранные">Добавить в Избранные</a></p>
+                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Подробнее об отеле">Подробнее об отеле</a> / <a href="#!/select/{{hotelId}}" title="Добавить в Избранные">В Избранные</a></p>
                         </div>
                     </div>
             <div class="closer"></div>
@@ -119,7 +119,7 @@
     <script type="text/html" id="logobar_tmpl">
         <a id="logo" href="/" title="Сервис бронирования номеров в отелях"><img src="/img/logo.png" alt="Bookenizer"/></a>
         <a id="contactus" href="#" title="Контакты">Контакты</a>
-        <strong>Сервис Он-Лайн Бронирования</strong>
+        <strong>Сервис Бронирования</strong>
     </script>
     <script type="text/html" id="searchType_switcher_quick">
         <li class="search">быстрый</li>
@@ -178,7 +178,7 @@
         <span class="host"><input type="text" name="city" id="city" class="dest" placeholder="Город"/>
         <!--<input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>-->
             <span class="diags">Извините, у нас нет предложений для этого города.</span>
-        <span class="diags" id="error_city">Вы ввели некорректное имя города. Проверьте его пожалуйста!</span>
+        <span class="diags" id="error_city">Некорректное имя города.</span>
         </span>
     </div>
 
