--- a/Locales/ru/hotelcard.html
+++ b/Locales/ru/hotelcard.html
@@ -242,7 +242,7 @@
 						<h3>Всего: <span id="orderCurrency" class="important">EUR</span> <span id="orderTotal" class="important">1,885</span></h3>
 
 						<div class="label last">
-							<span class="label">Оформить</span><input type="submit" name="submit" value="Ок" class="submit" />
+							<span class="label">Далее</span><input type="submit" name="submit" value="Ок" class="submit" />
 						</div>
 
 					</div>
